--- a/src/app/calculadora/components/calculadora.component.html
+++ b/src/app/calculadora/components/calculadora.component.html
@@ -12,7 +12,8 @@
 						<div class="col-md-3">
 							<button
 								type="button"
-								class="btn btn-danger kz-btn">C
+								class="btn btn-danger kz-btn"
+								(click)="limpar()">C
 							</button>
 						</div>
 						<div class="col-md-9">
@@ -21,6 +22,7 @@
 								class="form-control text-right kz-input-text"
 								id="display"
 								name="display"
+								[value]="display"
 								readonly>
 						</div>
 					</div>
@@ -29,6 +31,7 @@
 							<button
 								type="button"
 								class="btn btn-default kz-btn"
+								(click)="adicionarNumero('7')"
 								id="btn7">7
 							</button>
 						</div>
@@ -36,6 +39,7 @@
 							<button
 								type="button"
 								class="btn btn-default kz-btn"
+								(click)="adicionarNumero('8')"
 								id="btn8">8
 							</button>
 						</div>
@@ -43,6 +47,7 @@
 							<button
 								type="button"
 								class="btn btn-default kz-btn"
+								(click)="adicionarNumero('9')"
 								id="btn9">9
 							</button>
 						</div>
@@ -50,7 +55,8 @@
 							<button
 								type="button"
 								class="btn btn-warning kz-btn"
-								id="btnDivisao">/
+								(click)="definirOperacao('/')"
+								id="btnDivisao">÷
 							</button>
 						</div>
 					</div>
@@ -59,6 +65,7 @@
 							<button
 								type="button"
 								class="btn btn-default kz-btn"
+								(click)="adicionarNumero('4')"
 								id="btn4">4
 							</button>
 						</div>
@@ -66,6 +73,7 @@
 							<button
 								type="button"
 								class="btn btn-default kz-btn"
+								(click)="adicionarNumero('5')"
 								id="btn5">5
 							</button>
 						</div>
@@ -73,6 +81,7 @@
 							<button
 								type="button"
 								class="btn btn-default kz-btn"
+								(click)="adicionarNumero('6')"
 								id="btn6">6
 							</button>
 						</div>
@@ -80,7 +89,8 @@
 							<button
 								type="button"
 								class="btn btn-warning kz-btn"
-								id="btnMultiplicacao">*
+								(click)="definirOperacao('*')"
+								id="btnMultiplicacao">x
 							</button>
 						</div>
 					</div>
@@ -89,6 +99,7 @@
 							<button
 								type="button"
 								class="btn btn-default kz-btn"
+								(click)="adicionarNumero('1')"
 								id="btn1">1
 							</button>
 						</div>
@@ -96,6 +107,7 @@
 							<button
 								type="button"
 								class="btn btn-default kz-btn"
+								(click)="adicionarNumero('2')"
 								id="btn2">2
 							</button>
 						</div>
@@ -103,6 +115,7 @@
 							<button
 								type="button"
 								class="btn btn-default kz-btn"
+								(click)="adicionarNumero('3')"
 								id="btn3">3
 							</button>
 						</div>
@@ -110,6 +123,7 @@
 							<button
 								type="button"
 								class="btn btn-warning kz-btn"
+								(click)="definirOperacao('-')"
 								id="btnSubtracao">-
 							</button>
 						</div>
@@ -119,6 +133,7 @@
 							<button
 								type="button"
 								class="btn btn-default kz-btn"
+								(click)="adicionarNumero('0')"
 								id="btn0">0
 							</button>
 						</div>
@@ -126,6 +141,7 @@
 							<button
 								type="button"
 								class="btn btn-default kz-btn"
+								(click)="adicionarNumero('.')"
 								id="btnDecimal">.
 							</button>
 						</div>
@@ -133,6 +149,7 @@
 							<button
 								type="button"
 								class="btn btn-success kz-btn"
+								(click)="calcular()"
 								id="btnCalcular">=
 							</button>
 						</div>
@@ -140,6 +157,7 @@
 							<button
 								type="button"
 								class="btn btn-warning kz-btn"
+								(click)="definirOperacao('+')"
 								id="btnSoma">+
 							</button>
 						</div>
